[gd_scene load_steps=9 format=3 uid="uid://dw8by4ttcwss5"]

[ext_resource type="Script" path="res://Scripts/levelThree.gd" id="1_ut8e1"]
[ext_resource type="PackedScene" uid="uid://dgdfx1w5ncnn0" path="res://Scenes/Player.tscn" id="2_76ob8"]
[ext_resource type="PackedScene" uid="uid://bb0ycludniugn" path="res://Scenes/Target.tscn" id="3_8g85g"]
[ext_resource type="FontFile" uid="uid://doog182xprt73" path="res://Assets/Code letterfont/CODE Bold.otf" id="4_wg42q"]
[ext_resource type="FontFile" uid="uid://bc3jfcgxsnyfo" path="res://Assets/Code letterfont/CODE Light.otf" id="5_5f58j"]
[ext_resource type="Script" path="res://Scripts/camera.gd" id="6_0hf2a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p7e3g"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dvr5i"]
size = Vector2(40, 40)

[node name="Level3" type="Node"]
script = ExtResource("1_ut8e1")

[node name="Player" parent="." instance=ExtResource("2_76ob8")]
position = Vector2(1081, 219)

[node name="Target" parent="." groups=["Target"] instance=ExtResource("3_8g85g")]
position = Vector2(95.0001, 487)

[node name="OBSTACLES" type="Node2D" parent="."]

[node name="Obstacle" type="StaticBody2D" parent="OBSTACLES"]
position = Vector2(969, 29)
rotation = 1.71669
scale = Vector2(6.6657, 0.809119)

[node name="Panel" type="Panel" parent="OBSTACLES/Obstacle"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p7e3g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OBSTACLES/Obstacle"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_dvr5i")

[node name="Obstacle2" type="StaticBody2D" parent="OBSTACLES"]
position = Vector2(331, 24)
rotation = 0.355057
scale = Vector2(3.93037, 0.809119)

[node name="Panel" type="Panel" parent="OBSTACLES/Obstacle2"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p7e3g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OBSTACLES/Obstacle2"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_dvr5i")

[node name="Obstacle3" type="StaticBody2D" parent="OBSTACLES"]
position = Vector2(226, 544)
rotation = -0.272118
scale = Vector2(3.93037, 0.809119)

[node name="Panel" type="Panel" parent="OBSTACLES/Obstacle3"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p7e3g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OBSTACLES/Obstacle3"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_dvr5i")

[node name="Obstacle4" type="StaticBody2D" parent="OBSTACLES"]
position = Vector2(749, 514)
rotation = 0.355057
scale = Vector2(3.93037, 0.809119)

[node name="Panel" type="Panel" parent="OBSTACLES/Obstacle4"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p7e3g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OBSTACLES/Obstacle4"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_dvr5i")

[node name="Obstacle5" type="StaticBody2D" parent="OBSTACLES"]
position = Vector2(448, 297)
rotation = 0.355057
scale = Vector2(3.93037, 0.809119)

[node name="Panel" type="Panel" parent="OBSTACLES/Obstacle5"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p7e3g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OBSTACLES/Obstacle5"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_dvr5i")

[node name="Obstacle6" type="StaticBody2D" parent="OBSTACLES"]
position = Vector2(650, 130)
rotation = -0.383094
scale = Vector2(3.93037, 0.809119)

[node name="Panel" type="Panel" parent="OBSTACLES/Obstacle6"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p7e3g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OBSTACLES/Obstacle6"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_dvr5i")

[node name="WALLS" type="Node2D" parent="."]

[node name="Wall1" type="StaticBody2D" parent="WALLS"]
position = Vector2(-31, -50)
scale = Vector2(30.392, 1.29287)

[node name="Panel" type="Panel" parent="WALLS/Wall1"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p7e3g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS/Wall1"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_dvr5i")

[node name="Wall2" type="StaticBody2D" parent="WALLS"]
position = Vector2(-31, 648)
scale = Vector2(30.392, 1.29287)

[node name="Panel" type="Panel" parent="WALLS/Wall2"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p7e3g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS/Wall2"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_dvr5i")

[node name="Wall3" type="StaticBody2D" parent="WALLS"]
position = Vector2(-1, -52)
rotation = 1.5708
scale = Vector2(18.792, 1.29287)

[node name="Panel" type="Panel" parent="WALLS/Wall3"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p7e3g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS/Wall3"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_dvr5i")

[node name="Wall4" type="StaticBody2D" parent="WALLS"]
position = Vector2(1205, -52)
rotation = 1.5708
scale = Vector2(19.072, 1.29287)

[node name="Panel" type="Panel" parent="WALLS/Wall4"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p7e3g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WALLS/Wall4"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_dvr5i")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Level" type="Label" parent="HUD"]
offset_left = 15.0
offset_top = 17.0
offset_right = 111.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_wg42q")
theme_override_font_sizes/font_size = 30
text = "NIVEL 3"

[node name="Bullets" type="Label" parent="HUD"]
offset_left = 15.0
offset_top = 52.0
offset_right = 111.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_wg42q")
theme_override_font_sizes/font_size = 30
text = "BALAS:"

[node name="BulletsDP" type="Label" parent="HUD"]
offset_left = 114.0
offset_top = 52.0
offset_right = 210.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_5f58j")
theme_override_font_sizes/font_size = 30
text = "5"

[node name="SHOTS" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_left = -3.0
offset_top = -6.0
offset_right = 37.0
offset_bottom = 34.0

[node name="Shots" type="Label" parent="HUD/SHOTS"]
offset_left = 965.0
offset_top = 13.0
offset_right = 1103.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_wg42q")
theme_override_font_sizes/font_size = 30
text = "DISPAROS:"

[node name="ShotsDP" type="Label" parent="HUD/SHOTS"]
offset_left = 1119.0
offset_top = 13.0
offset_right = 1215.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_5f58j")
theme_override_font_sizes/font_size = 30
text = "4"

[node name="Bounces" type="Label" parent="HUD"]
offset_left = 15.0
offset_top = 87.0
offset_right = 111.0
offset_bottom = 118.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_wg42q")
theme_override_font_sizes/font_size = 30
text = "REBOTES:"

[node name="BouncesDP" type="Label" parent="HUD"]
offset_left = 150.0
offset_top = 87.0
offset_right = 246.0
offset_bottom = 118.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_5f58j")
theme_override_font_sizes/font_size = 30
text = "5 / 5"

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(574, 324)
script = ExtResource("6_0hf2a")

[node name="ShakeTime" type="Timer" parent="Camera"]

[connection signal="body_entered" from="Target" to="." method="_on_target_body_entered"]
[connection signal="timeout" from="Camera/ShakeTime" to="Camera" method="_on_shake_time_timeout"]
